[package]
name = "bignumber"
authors = ["Georges KABBOUCHI <georges.kabbouchi@gmail.com>"]
version = "0.0.6"
edition = "2021"
description = "A Rust library for arbitrary-precision decimal and non-decimal arithmetic"
keywords = ["bignumber", "mathematics", "numerics", "decimal", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT"
repository = "https://github.com/KABBOUCHI/bignumber-rs"
homepage = "https://github.com/KABBOUCHI/bignumber-rs"
documentation = "https://docs.rs/bignumber"
readme = "README.md"
rust-version = "1.61"

[dependencies]
dashu-float = "0.2.1"
ethereum-types = { version = "0.13.1", default-features = false }
