[package]
name = "bignumber"
authors = ["Georges KABBOUCHI <georges.kabbouchi@gmail.com>"]
version = "0.0.12"
edition = "2021"
description = "A Rust library for arbitrary-precision decimal and non-decimal arithmetic"
keywords = ["bignumber", "mathematics", "numerics", "decimal", "arbitrary-precision"]
categories = ["mathematics", "no-std"]
license = "MIT"
repository = "https://github.com/KABBOUCHI/bignumber-rs"
homepage = "https://github.com/KABBOUCHI/bignumber-rs"
documentation = "https://docs.rs/bignumber"
readme = "README.md"
rust-version = "1.61"

[dependencies]
dashu-float = "0.2.1"
ethereum-types = "0.14.0"
ethers = { version = "1.0.0", optional = true, default-features = false }
primitive-types = "0.12.1"
serde = "1.0.147"

[features]
default = []
ethers = ["dep:ethers"]
precision-256 = []
precision-512 = []
precision-1024 = []